styled formfields components

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -8,9 +8,15 @@ html {
     margin: 0;
     padding: 0;
     box-sizing: inherit;
-    font-family: 'montserrat';
+}
+body{
+    font-family: 'Open Sans', sans-serif;
+    color:#808080;
 }
 
 @import "layout";
 @import "headernavbar";
+@import "auth/signin.scss";
+@import "auth/signup.scss";
 @import "pageTitle";
+@import "formFields";
