--- a/src/style/auth/signin.scss
+++ b/src/style/auth/signin.scss
@@ -2,11 +2,14 @@
     grid-row:content-s/content-e;
     grid-column:s/e;
 
-    &__form { //=sing-in__form 
+    //&__form { //=sing-in__form 
 
+    //}
+}
+
+.sign-in-form {
+
+    &__line {
+        border-top: 1px solid #ccc;
     }
-}
-
-.sign-in-form{
-
-}
+} 
