developed signupForm and modified formbutton to have short gray case

--- a/src/style/formFields.scss
+++ b/src/style/formFields.scss
@@ -33,7 +33,10 @@
         &:focus {
             outline: none;
         }
-
+    }
+    &__gray-button{
+        background:#999;
+        width:137px;
     }
 
 }
