--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -21,3 +21,6 @@ body{
 @import "pageTitle";
 @import "formFields";
 @import "details";
+@import "./account/purchaseHistory.scss";
+@import "./account/accountInformation.scss";
+@import "./account/account.scss";
