--- a/src/style/account/purchaseHistory.scss
+++ b/src/style/account/purchaseHistory.scss
@@ -2,7 +2,26 @@
     
 
     &__page-title{
+        border-bottom: 1px solid #CCC;
+    }
+
+    &__purchases{
 
     }
+
+    &__detail{
+
+    }
+
+    &__border-bottom{
+        border-bottom: 1px solid #F2F2F2;
+    }
+}
+
+.purchases{
+
+}
+
+.purchase-detail{
 
 }
