styled in shopProduct and changed a font in index.html

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -33,6 +33,7 @@ body{
 //Shop
 @import"./shop/shop";
 @import "shopSearchBar";
+@import "./shop/shopProduct.scss";
 
 // QUANTITY
 @import 'quantity';
