--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -34,6 +34,7 @@ body{
 @import"./shop/shop";
 @import "shopSearchBar";
 @import "./shop/shopProduct.scss";
+@import "./shop/shopCart.scss";
 
 // QUANTITY
 @import 'quantity';
