--- a/src/style/shop/shopCart.scss
+++ b/src/style/shop/shopCart.scss
@@ -17,30 +17,35 @@
     &__content {
         grid-row: con-s/con-e;
         grid-column: s/e;
-    }
-}
-
-.shop-cart {
-    &__toggle {
-
-    }
-    &__content {
-        height: 675px;
-        width: 520px;
+        height: 550px;
+        width: 424px;
         background-color: #333;
         box-shadow: -3px 20px 20px 0 rgba(0,0,0,0.2);
     }
 }
+
 
 .cart-button {
     background-color: #333;
     color: white;
     font-size: 28px;
     border-radius: 25px 0 0 25px;
-    height: 40px;
-    width: 76px;
+    height: 32px;
+    width: 62px;
 }
 
 .cart-content {
+    &__title {
+        font-weight: 600;
+        font-size: 30px;
+        font-family: 'Titillium Web', sans-serif;
+        color: #E6E6E6;
+    }
+    &__products {
+        display: grid;
+    }
+    &__footer {
+        display: grid;
+    }
 
 }
