created cartProduct.scss  + modified shopCart.scss

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -35,6 +35,7 @@ body{
 @import "shopSearchBar";
 @import "./shop/shopProduct.scss";
 @import "./shop/shopCart.scss";
+@import "./shop/cartProduct.scss";
 
 // QUANTITY
 @import 'quantity';
