--- a/src/style/shop/shopCart.scss
+++ b/src/style/shop/shopCart.scss
@@ -37,7 +37,7 @@
 .cart-content {
     display: grid;
     grid-template-rows: 25px [title-s] 40px [title-e products-s] 1fr [products-e footer-s] 113px [footer-e];
-    grid-template-columns: [footer-s] 30px [s] 1fr [e] 30px [footer-e];
+    grid-template-columns: [footer-s] 10px [s] 1fr [e] 10px [footer-e];
 
     &__title {
         grid-column: s/e;
@@ -54,6 +54,7 @@
         grid-column: s/e;
         grid-row: products-s/products-e;
         overflow-y: scroll;
+        grid-row-gap: 45px;
     }
     &__footer {
         display: grid;
