--- a/src/style/shop/shopCart.scss
+++ b/src/style/shop/shopCart.scss
@@ -1,17 +1,15 @@
 .shop-cart {
+    transition: all .3s ease;
     display: grid;
     grid-template-rows: [tog-s] 40px [tog-e con-s] 1fr [con-e];
     grid-template-columns: [s] 1fr [e];
     grid-row-gap: 15px;
     
     &__toggle {
+        z-index: 6;
         grid-row: tog-s/tog-e;
         grid-column: s/e;
         justify-self: end;
-
-        display: grid;
-        justify-items: center;
-        align-items: center;
     }
 
     &__content {
@@ -26,12 +24,17 @@
 
 
 .cart-button {
+    transition: all .3s ease;
+
     background-color: #333;
     color: white;
-    font-size: 28px;
+    font-size: 20px;
     border-radius: 25px 0 0 25px;
     height: 32px;
     width: 62px;
+    display: grid;
+    justify-items: center;
+    align-items: center;
 }
 
 .cart-content {
@@ -121,3 +124,7 @@
     }
 
 } 
+
+.cart-hidden {
+    transform: translateX(520px);
+}
