--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -12,6 +12,11 @@ html {
 body{
     font-family: 'Open Sans', sans-serif;
     color:#808080;
+
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    text-rendering: optimizeLegibility;
+    -webkit-tap-highlight-color: transparent;
 }
 
 @import "layout";
