--- a/src/style/order/reviewForm.scss
+++ b/src/style/order/reviewForm.scss
@@ -1,4 +1,11 @@
 .review-form {
+    &__legend {
+        grid-row: legend-s/legend-e;
+        grid-column: 1/-1;
+        font-size: 14px;
+        border-bottom: 1px solid #CCC;
+        padding-bottom: 11px;
+    }
     &__products {
         grid-column: 1/-1;
         grid-row: products-s/products-e;
@@ -19,6 +26,7 @@
     &__back {
         grid-row: buttons-s/buttons-e;
         grid-column: back-s/back-e;
+
     }
     &__proceed {
         grid-row: buttons-s/buttons-e;
