--- a/src/style/information/shipping.scss
+++ b/src/style/information/shipping.scss
@@ -49,4 +49,10 @@
         grid-column: use-this-address-s/use-this-address-e;
 
     }
+
+    &__order-summary  {
+        grid-row: name-s;
+        grid-column: use-this-address-e/-1;
+        justify-self: end;
+    }
 }
